modify java sdk put